--- a/UWPBluetooth/MainPage.xaml
+++ b/UWPBluetooth/MainPage.xaml
@@ -9,8 +9,11 @@
     Background="#FFDC7A7A" Loaded="OnMainPageLoaded" Width="800" Height="600">
 
     <Grid>
-        <Button Content="通用扫描" HorizontalAlignment="Left" Height="115" Margin="130,130,0,0" VerticalAlignment="Top" Width="230" Click="OnClicked"/>
-        <Button Content="定向扫描" HorizontalAlignment="Left" Height="120" Margin="110,355,0,0" VerticalAlignment="Top" Width="225" Click="OnScanClicked2"/>
+        <Button Content="通用扫描" HorizontalAlignment="Left" Height="55" Margin="41,32,0,0" VerticalAlignment="Top" Width="206" Click="OnClicked"/>
+        <Button Content="定向扫描" HorizontalAlignment="Left" Height="55" Margin="277,32,0,0" VerticalAlignment="Top" Width="204" Click="OnScanClicked2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="433,171,0,0" VerticalAlignment="Top" Height="55" Width="175" Click="Button_Click"/>
+        <TextBox HorizontalAlignment="Left" x:Name="TXT" Margin="94,142,0,0" Text="" VerticalAlignment="Top" Height="343" Width="306"/>
+        <Button Content="连接" HorizontalAlignment="Left" Margin="536,30,0,0" VerticalAlignment="Top" Height="59" Width="171" Click="Button_Click_1"/>
 
     </Grid>
 </Page>
